fixed problem with clipping mask

--- a/www/assets/styles/base.less
+++ b/www/assets/styles/base.less
@@ -35,7 +35,7 @@
         width: 1040px;
         height: 570px;
         overflow:hidden;
-        -webkit-mask-box-image: url('../images/map-mask.png') top no-repeat;
+        -webkit-mask-box-image: url('../images/map-mask.png');
     }
 }
 .olMap > div {  z-index:0 !important; }
